processed/gerrit/txt/36189.txt
Change:     36189
Subject:    LU-12764 lnet: eliminate uninitialized warning
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/36189
Change-Id:  I1ccd88ca5061b5f29a530bf2b755585c92612a69
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Wang Shilong
Created:    2019-09-16 02:02:04.000000000
Updated:    2019-10-04 03:44:51.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Oleg Drokin: +2; Li Dongyang: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Gerrit Gatekeeper, Amir Shehata, Li Dongyang, Wang Shilong

--- Commit Message ---
LU-12764 lnet: eliminate uninitialized warning

lustre-release/lnet/lnet/router.c: In function ‘lnet_del_route’:
include/linux/compiler.h:177:26: error: ‘lp’ may be used uninitialized
in this function [-Werror=maybe-uninitialized]
  case 8: *(__u64 *)res = *(volatile __u64 *)p; break;  \
                          ^
/home/wangsl/lustre-release/lnet/lnet/router.c:754:20: note: ‘lp’ was declared here
  struct lnet_peer *lp;
                    ^
/home/wangsl/lustre-release/lnet/lnet/router.c: At top level:
cc1: error: unrecognized command line option ‘-Wno-stringop-overflow’ [-Werror]
cc1: error: unrecognized command line option ‘-Wno-stringop-truncation’ [-Werror]
cc1: error: unrecognized command line option ‘-Wno-format-truncation’ [-Werror]
cc1: all warnings being treated as errors

codes logic gurantee @lpi and @lpni are inited at the same time,
but let's init @lpi to make gcc happy.

Change-Id: I1ccd88ca5061b5f29a530bf2b755585c92612a69
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/36189
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Wang Shilong, 2019-09-16 02:02:04.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-09-16 02:03:22.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-09-16 02:03:40.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (jenkins, 2019-09-16 02:36:12.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/8446/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/68231/ : SUCCESS

--- Message (Autotest, 2019-09-16 02:36:56.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-1 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:56.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:56.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-1 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:57.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-2 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:57.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-ldiskfs-arm session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:57.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-2 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:58.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-4 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:58.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-3 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:58.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-zfs-part-4 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:59.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-dne-part-3 session for build 68231.

--- Message (Autotest, 2019-09-16 02:36:59.000000000) ---
Patch Set 1:

Onyx Autotest started enforced review-zfs session for build 68231.

--- Message (Autotest, 2019-09-16 11:51:45.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-ldiskfs-arm session for build 68231. Requested by wangshilong because of ATM-1361.

--- Message (Wang Shilong, 2019-09-26 23:29:52.000000000) ---
Patch Set 1:

ping  reviewers!

--- Message (Andreas Dilger, 2019-09-27 12:11:08.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Li Dongyang, 2019-09-30 04:07:43.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2019-10-04 03:28:21.000000000) ---
Patch Set 1: Code-Review+2

--- Message (unknown, 2019-10-04 03:44:51.000000000) ---
Change has been successfully cherry-picked as a8fbaa1b998f558cdb196822447b2aafe8cf98b5 by Oleg Drokin
